# master-fetch

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  STATUS.md  V7-SEARCH-PLAN.md  index.html  main.js  package.json  pyproject.toml  repository.json  robots.txt  sitemap.xml  style.css
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.yml
.github/workflows/: ci.yml
hound-mcp/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  README_UPSTREAM.md  apparmor.txt  config.yaml  pyproject.toml  run.sh
hound-mcp/src/master_fetch/: __init__.py  actions.py  api_backends.py  browser.py  byok_config.py  cache.py  cli_ui.py  crawl.py  envelope.py  extractor.py  fetcher.py  links.py  pdf_extractor.py  reranker.py  search.py  search_api_keys.py  search_engines.py  search_metasearch.py  security.py  server.py  sitemap.py  trafilatura_extractor.py  updater.py
hound-mcp/translations/: en.yaml
pi-extension/: README.md  package.json
pi-extension/extensions/: hound.ts
scripts/: check_pi_extension_sync.py  compress_tooldef.py  count_tooldef_tokens.py  fix_tooldef_v10.py  live_archive_check.py  live_idle_check.py  profile_hotpath.py  sync_pi_descs.py
src/master_fetch/: __init__.py  __main__.py  actions.py  archive.py  browser.py  cache.py  cli.py  crawl.py  domain_intel.py  envelope.py  fetcher.py  focus.py  metadata.py  ocr.py  pdf_extractor.py  reddit.py  reranker.py  robots.py  search.py  search_api_keys.py  search_engines.py  search_metasearch.py  security.py  server.py  trafilatura_extractor.py  updater.py
tests/: __init__.py  conftest.py  e2e_mcp_test.py  old_reddit_real.html  test_actions.py  test_agent_qol.py  test_byok.py  test_cache.py  test_cache_qol.py  test_cli.py  test_crawl.py  test_domain_intel.py  test_envelope.py  test_error_detection.py  test_fetcher.py  test_focus.py  test_graceful_degradation.py  test_metadata.py  test_ocr.py  test_optimizations_v361.py  test_pdf_extractor.py  test_pdf_v6.py  test_reddit.py  test_reddit_routing.py  test_reinstall.py  test_reliability_v3.py  test_reranker.py  test_robots.py  test_search.py  test_search_engines.py  test_search_quality.py  test_search_v5.py  test_security.py  test_self_heal.py  test_server.py  test_stealth.py  test_trafilatura.py  test_v10_archive.py  test_v10_construction.py  test_v10_devworkflow.py  (+5 more)
