[project]
name = "hound-mcp"
version = "4.0.3"
description = "Web research for AI agents. Fetch any page with anti-bot bypass plus web search. $0 forever."
readme = "README.md"
authors = [{name = "Bishesh Bhandari", email = "bishesh@master-fetch.dev"}]
requires-python = ">=3.11"
dependencies = [
    "scrapling[ai]>=0.4.7",
    "trafilatura>=2.0.0",
    "aiosqlite>=0.20.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
keywords = ["mcp", "web-scraping", "cloudflare-bypass", "anti-bot", "content-extraction", "ai-agent", "mcp-server"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
all = [
    "requests>=2.31",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30",
    "rapidocr>=3.0",
]

[project.urls]
Repository = "https://github.com/dondai1234/master-fetch"
Issues = "https://github.com/dondai1234/master-fetch/issues"
Changelog = "https://github.com/dondai1234/master-fetch/blob/master/CHANGELOG.md"

[project.scripts]
hound = "master_fetch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master_fetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not e2e"]
markers = [
    "e2e: end-to-end tests that spawn a real hound.exe subprocess. Skip by default in CI; run manually with `pytest -m e2e`.",
]
